[package]
name = "grid_pathfinding"
version = "0.2.0"
authors = ["Thom van der Woude <tbvanderwoude@protonmail.com>"]
edition = "2021"
description = "Pathfinding using JPS and connected components on a grid."
keywords = ["pathfinding","grid","jump","point","JPS"]
categories = ["game-development","simulation","algorithms"]
license = "MIT"
repository = "https://github.com/tbvanderwoude/grid_pathfinding"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
indexmap = "2.2"
fxhash = "0.2"
itertools = "0.12"
num-traits = "0.2"
grid_util = "0.1.1"
log = "0.4"

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"
csv = "1.3.0"
serde = "1.0.204"

[[bench]]
name = "comparison_bench"
harness = false
