[package]
name = "grid_pathfinding"
version = "0.2.1"
authors = ["Thom van der Woude <tbvanderwoude@protonmail.com>"]
edition = "2021"
description = "Pathfinding using JPS and connected components on a grid."
keywords = ["pathfinding","grid","jump","point","JPS"]
categories = ["game-development","simulation","algorithms"]
license = "MIT"
repository = "https://github.com/tbvanderwoude/grid_pathfinding"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
indexmap = "2.3"
fxhash = "0.2"
itertools = "0.13"
num-traits = "0.2"
grid_util = { git = "https://github.com/tbvanderwoude/grid_util.git" }
log = "0.4"
smallvec = "1.13.2"

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
grid_pathfinding_benchmark = { path = "grid_pathfinding_benchmark" }
rand = "0.8.5"

[[bench]]
name = "comparison_bench"
harness = false
